--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -5,9 +5,9 @@
             <div class="varticalLine"></div>
            <p style="width:30%; display: flex; align-items: center; text-align: center; justify-content: center; font-size: x-large; font-weight: bolder;"><span></span>Aiinhome</p>
            <div class="varticalLine"></div>
-           <span>Welcome {{userName}}</span> 
+           <span style="cursor: default;">Welcome {{userName}}</span> 
         </div>
-         <div class="rightupperdivsection">
+         <div class="rightupperdivsection" style="cursor: default;">
         <div class="headerText">
             <h3>SMART Document Repository System</h3>
             <p style="color: #f1eded;" id="timeslot">{{dt0}} {{dt1}}, {{dt2}} {{dt3}}:{{dt4}} {{APM}}</p>
